objects/ASI_DFPM_Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>ASI_DFPM_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Approval_Task_Type__c</fullName>
        <label>Approval Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval NPL Form</fullName>
                    <default>true</default>
                    <label>Approval NPL Form</label>
                </value>
                <value>
                    <fullName>Approval Marketing</fullName>
                </value>
                <value>
                    <fullName>Approval Commercial</fullName>
                </value>
                <value>
                    <fullName>Approval Finance</fullName>
                </value>
                <value>
                    <fullName>Approval MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Attachment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Brand__c</fullName>
        <formula>TRIM(
IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Absolut&quot;), &quot;Absolut&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Ballantine&apos;s&quot;), &quot;Ballantine&apos;s&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Beefeater&quot;), &quot;Beefeater&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Chateau Lafita&quot;), &quot;Chateau Lafita&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Chivas Regal&quot;), &quot;Chivas Regal&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Royal Salute&quot;), &quot;Royal Salute&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;John Jameson&quot;), &quot;John Jameson&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Kahlua&quot;), &quot;Kahlua&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Malibu&quot;), &quot;Malibu&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Martell&quot;), &quot;Martell&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;Jacob&apos;s Creek&quot;), &quot;Jacob&apos;s Creek&quot; + &quot;; &quot; , NULL)
 + IF(INCLUDES( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Brand__c, &quot;The Glenlivet&quot;), &quot;The Glenlivet&quot; + &quot;; &quot; , NULL)
)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Gantt_Chart_Color__c</fullName>
        <formula>IF( ASI_DFPM_Complete__c, &quot;#ACB4B7&quot;, &quot;#2299BB&quot; )</formula>
        <label>Gantt Chart Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Inform_Name_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inform Name 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotional_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Inform_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inform Name 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotional_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Inform_Name_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inform Name 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotional_Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Location__c</fullName>
        <formula>IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Guam&quot;), &quot;Guam, &quot;,&quot;&quot;) &amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Hong Kong&quot;), &quot;Hong Kong, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Indonesia&quot;), &quot;Indonesia, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Korea&quot;), &quot;Korea, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Malaysia&quot;), &quot;Malaysia, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Singapore&quot;), &quot;Singapore, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Taiwan&quot;), &quot;Taiwan, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Thailand&quot;), &quot;Thailand, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Vietnam&quot;), &quot;Vietnam, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;China&quot;), &quot;China, &quot;, &quot;&quot;)&amp; IF(INCLUDES(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Location__c, &quot;Japan&quot;), &quot;Japan, &quot;, &quot;&quot;)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Overdue__c</fullName>
        <formula>IF( NOT( ASI_DFPM_Complete__c ) &amp;&amp; ASI_DFPM_End_Date__c - TODAY() &lt; 0, &apos;Yes&apos;, &apos;No&apos; )</formula>
        <label>Overdue?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Predeccessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predeccessor Task</label>
        <referenceTo>ASI_DFPM_Project_Task__c</referenceTo>
        <relationshipLabel>Successor Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Prefix_Number__c</fullName>
        <label>Prefix Number</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Project_Milestone__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>ASI_DFPM_Project_Milestone__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>ASI_DFPM_Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Promotional_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Promotional Project</label>
        <referenceTo>ASI_DFPM_Promotional_Project__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Promotional_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Resource_Team__c</fullName>
        <label>Resource Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Pricing Analyst</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Marketing Coordinator</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Sys_Project_ID__c</fullName>
        <formula>ASI_DFPM_Promotional_Project__r.Id</formula>
        <label>Sys_Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Sys_Project_Record_Type_ID__c</fullName>
        <formula>ASI_DFPM_Project_Milestone__r.ASI_DFPM_Promotional_Project__r.RecordTypeId</formula>
        <label>Sys_Project_Record_Type_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Sys_Project_Record_Type__c</fullName>
        <formula>ASI_DFPM_Project_Milestone__r.ASI_DFPM_Promotional_Project__r.RecordType.DeveloperName</formula>
        <label>Sys_Project_Record_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Sys_Project_Status__c</fullName>
        <formula>Text(ASI_DFPM_Project_Milestone__r.ASI_DFPM_Promotional_Project__r.ASI_DFPM_Status__c)</formula>
        <label>Sys_Project_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Task_Name__c</fullName>
        <formula>HYPERLINK( 
 &quot;/&quot; &amp; IF( NOT( ISNULL( ASI_DFPM_Project_Milestone__r.ASI_DFPM_Prefix_Number__c ) ) &amp;&amp; NOT( ISNULL( ASI_DFPM_Prefix_Number__c ) ), TEXT( ASI_DFPM_Project_Milestone__r.ASI_DFPM_Prefix_Number__c ) &amp; &quot;.&quot;, &quot;&quot; )
 &amp; IF( ISNULL( ASI_DFPM_Prefix_Number__c ) , &quot;&quot;
     , IF( ASI_DFPM_Prefix_Number__c &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( ASI_DFPM_Prefix_Number__c ) &amp; &quot;. &quot;
 )
 &amp; Name
 , &quot;&quot;
 , &quot;_parent&quot;
)
 &amp; HYPERLINK( 
 &quot;/&quot; &amp; Id 
 , IF( NOT( ISNULL( ASI_DFPM_Project_Milestone__r.ASI_DFPM_Prefix_Number__c ) ) &amp;&amp; NOT( ISNULL( ASI_DFPM_Prefix_Number__c ) ), TEXT( ASI_DFPM_Project_Milestone__r.ASI_DFPM_Prefix_Number__c ) &amp; &quot;.&quot;, &quot;&quot; )
 &amp; IF( ISNULL( ASI_DFPM_Prefix_Number__c ) , &quot;&quot;
     , IF( ASI_DFPM_Prefix_Number__c &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( ASI_DFPM_Prefix_Number__c ) &amp; &quot;. &quot;
 )
 &amp; Name
 , &quot;_parent&quot;
)</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>ASI_DFPM_All</fullName>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Project_Milestone__c</columns>
        <columns>ASI_DFPM_Task_Name__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Approval_Required__c</columns>
        <columns>ASI_DFPM_Has_Attachment__c</columns>
        <columns>ASI_DFPM_Predeccessor_Task__c</columns>
        <columns>ASI_DFPM_Resource_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_All_Overdue_Tasks</fullName>
        <columns>ASI_DFPM_Task_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Project_Milestone__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Approval_Required__c</columns>
        <columns>ASI_DFPM_Predeccessor_Task__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_DFPM_End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>All Overdue Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_My_Outstanding_Tasks</fullName>
        <columns>ASI_DFPM_Task_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Project_Milestone__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Approval_Required__c</columns>
        <columns>ASI_DFPM_Has_Attachment__c</columns>
        <columns>ASI_DFPM_Predeccessor_Task__c</columns>
        <columns>ASI_DFPM_Resource_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_DFPM_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>My Outstanding Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_My_Overdue_Tasks</fullName>
        <columns>ASI_DFPM_Task_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Project_Milestone__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Approval_Required__c</columns>
        <columns>ASI_DFPM_Has_Attachment__c</columns>
        <columns>ASI_DFPM_Predeccessor_Task__c</columns>
        <columns>ASI_DFPM_Resource_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_DFPM_End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>My Overdue Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_My_Tasks</fullName>
        <columns>ASI_DFPM_Task_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Project_Milestone__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Approval_Required__c</columns>
        <columns>ASI_DFPM_Has_Attachment__c</columns>
        <columns>ASI_DFPM_Predeccessor_Task__c</columns>
        <columns>ASI_DFPM_Resource_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>My Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_Tasks_by_Project</fullName>
        <columns>ASI_DFPM_Task_Name__c</columns>
        <columns>ASI_DFPM_Resource_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_DFPM_Project_Milestone__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Has_Attachment__c</columns>
        <columns>ASI_DFPM_Approval_Required__c</columns>
        <columns>ASI_DFPM_Attachment_Required__c</columns>
        <columns>ASI_DFPM_Inform_Name_1__c</columns>
        <columns>ASI_DFPM_Inform_Name_2__c</columns>
        <columns>ASI_DFPM_Inform_Name_3__c</columns>
        <columns>ASI_DFPM_Predeccessor_Task__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_DFPM_Promotional_Project__c</field>
            <operation>contains</operation>
            <value>Plug In Promotion Template - UAT - Cloned on 5/7/2013</value>
        </filters>
        <label>Tasks by &lt;Project&gt;</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_DFPM_Milestone_Owner__c</fullName>
        <label>Milestone Owner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_DFPM_Project_Owner__c</fullName>
        <label>Project Owner</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_DFPM_AttachmentRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_DFPM_Attachment_Required__c  &amp;&amp;  ASI_DFPM_Complete__c   &amp;&amp; !ASI_DFPM_Has_Attachment__c</errorConditionFormula>
        <errorMessage>You must upload attachment for this task before it can be completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_CantAddTasksToCompleteMilestone</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_DFPM_Project_Milestone__r.ASI_DFPM_Complete__c</errorConditionFormula>
        <errorMessage>You can not add tasks to a completed milestone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_EndDate_within_milestone</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ASI_DFPM_End_Date__c ) &amp;&amp; !ISBLANK(ASI_DFPM_Project_Milestone__r.ASI_DFPM_End_Date__c) &amp;&amp; (ASI_DFPM_End_Date__c &gt; ASI_DFPM_Project_Milestone__r.ASI_DFPM_End_Date__c)</errorConditionFormula>
        <errorMessage>Project task end date must be less than or equal to the milestone end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_Not_Modify_Template_Task</fullName>
        <active>false</active>
        <errorConditionFormula>ASI_DFPM_Project_Milestone__r.ASI_DFPM_Promotional_Project__r.RecordType.DeveloperName  = &quot;ASI_DFPM_Template&quot;</errorConditionFormula>
        <errorMessage>You can NOT add or modify the template task. Please contact the system administrator for help</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_after_Pre_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( ASI_DFPM_Start_Date__c )) &amp;&amp; NOT(ISNULL(  ASI_DFPM_Predeccessor_Task__r.ASI_DFPM_End_Date__c )) &amp;&amp; ASI_DFPM_Start_Date__c &lt; ASI_DFPM_Predeccessor_Task__r.ASI_DFPM_End_Date__c</errorConditionFormula>
        <errorMessage>Project task start date must not be earlier than its Predecessor&apos;s end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_before_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( ASI_DFPM_Start_Date__c )) &amp;&amp; NOT(ISNULL( ASI_DFPM_End_Date__c )) &amp;&amp; ASI_DFPM_End_Date__c &lt; ASI_DFPM_Start_Date__c</errorConditionFormula>
        <errorMessage>Start date must be less or equal than the end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_within_milestone</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ASI_DFPM_Start_Date__c)  &amp;&amp;  !ISBLANK(ASI_DFPM_Project_Milestone__r.ASI_DFPM_Start_Date__c ) &amp;&amp; (ASI_DFPM_Start_Date__c &lt; ASI_DFPM_Project_Milestone__r.ASI_DFPM_Start_Date__c)</errorConditionFormula>
        <errorMessage>Project task start date must be greater than or equal to the milestone start date</errorMessage>
    </validationRules>
</CustomObject>